Add weather and location feature 1. Add weather api to get current weather based on latitude and longitude 2. Add location feature to get current latitude and longitude

--- a/CoffeeShop.Api/appsettings.json
+++ b/CoffeeShop.Api/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpenweatherApiKey": "f05a1c846b571b22ae4bd82868eaba40"
 }
